--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,14 @@ body {
 	width: 80%;
 	max-width: 1024px;
 	margin: 0 auto;
+	background-color: #837676;
 }
+
 
 .container-padding50 {
 	padding-top: 50px;
 }
+
 
 .container-textinput {
 	width: 80%;
@@ -14,18 +17,21 @@ body {
 	padding: 20px;
 	font-size: 16px;
 	font-family: Helvetica, sans-serif;
+	background-color: #ada0a0;
+	border-radius: 5px;
 }
 
 .container-button {
 	width: 10%;
 	display: inline-block;
 	padding: 20px;
-	background-color: green;
-	color: white;
+	background-color: ada0a0;
+	/* color: white; */
 	font-size: 16px;
 	font-family: Helvetica, sans-serif;
+    background-color: #ada0a0;
 
-	border: 1px solid green;
+	/* box-shadow: 1px solid rgb(50, 54, 50); */
 	border-radius: 5px;
 }
 
@@ -34,4 +40,11 @@ body {
 	display: block;
 	float: left;
 	margin:1%;
+	border-radius: 10px;
+}
+
+.results {
+	text-align: center;
+	margin-top: 25px;
+	font-size: 25px;
 }
